--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="https://i.ibb.co/M8S0Zzj/live-streaming.png" itemprop="thumbnailUrl">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tmr Player</title>
+    <title>%s</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Delius">
     <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css"/>
@@ -127,7 +127,7 @@
     <header>
         <marquee bgcolor="#808080">
 <div class="toogle"></div>
-        <div id="Tmr Player">
+        <div id="file-name">
             %s
         </div>
 </marquee>
@@ -161,14 +161,14 @@
 </div>
 <div class="containerbox"> 
      <div id="info-box"> 
-     <p style="font-size: 15px; color:#120e0e;"><FONT COLOR="#ff0000"><u><b>𝐍𝐨𝐭𝐞</u> :</b>  </FONT>ɪꜰ ʏᴏᴜ ꜰɪɴᴅ ᴀɴʏ ʙʀᴏᴋᴇɴ ʟɪɴᴋ ᴛʜᴇɴ ᴘʟᴇᴀsᴇ ʀᴇᴘᴏʀᴛ ᴛᴏ ᴍʏ <a href="https://Telegram.dog/Tmr_Botz_Support" style="color: blue"><b>sᴜᴘᴘᴏʀᴛ ᴛᴇᴀᴍ</b></a></p>
+     <p style="font-size: 15px; color:#120e0e;"><FONT COLOR="#ff0000"><u><b>𝐍𝐨𝐭𝐞</u> :</b>  </FONT>ɪꜰ ʏᴏᴜ ꜰɪɴᴅ ᴀɴʏ ʙʀᴏᴋᴇɴ ʟɪɴᴋ ᴛʜᴇɴ ᴘʟᴇᴀsᴇ ʀᴇᴘᴏʀᴛ ᴛᴏ ᴍʏ <a href="https://telegram.me/CodeXSupport" style="color: blue"><b>sᴜᴘᴘᴏʀᴛ ᴛᴇᴀᴍ</b></a></p>
      </div>
 </div>
 
 <center>
 <div style="margin-bottom: 10px; margin-top: 10px">𝐅𝐨𝐥𝐥𝐨𝐰 𝐎𝐮𝐫 𝐒𝐨𝐜𝐢𝐚𝐥 𝐌𝐞𝐝𝐢𝐚 𝐏𝐥𝐚𝐭𝐟𝐨𝐫𝐦𝐬 💞</div>
-<h3><b><a href="https://Telegram.dog/Tmr_Botz"><img alt="replit" src="https://img.shields.io/badge/-Github-black?style=for-the-badge&logo=github&logoColor=white"/></a> <a href="https://Telegram.dog/Tmr_Botz"><img alt="replit" src="https://img.shields.io/badge/-twitter-black?style=for-the-badge&logo=x&logoColor=white"/></a>
-<br><a href="https://Telegram.dog/Tmr_Botz"><img alt="replit" src="https://img.shields.io/badge/-youtube-red?style=for-the-badge&logo=youtube&logoColor=white"/></a></b></h3></center>
+<h3><b><a href="https://www.github.com/CodeXBots"><img alt="replit" src="https://img.shields.io/badge/-Github-black?style=for-the-badge&logo=github&logoColor=white"/></a> <a href="https://twitter.com/RahulReviewsYT"><img alt="replit" src="https://img.shields.io/badge/-twitter-black?style=for-the-badge&logo=x&logoColor=white"/></a>
+<br><a href="https://youtube.com/@RahulReviews"><img alt="replit" src="https://img.shields.io/badge/-youtube-red?style=for-the-badge&logo=youtube&logoColor=white"/></a></b></h3></center>
 
 <br>
 <br>
@@ -178,7 +178,7 @@
 <center> 
 <div style="margin-bottom: 10px; margin-top: 20px">𝐉𝐨𝐢𝐧 𝐎𝐮𝐫 𝐌𝐚𝐢𝐧 𝐂𝐡𝐚𝐧𝐧𝐞𝐥 𝐅𝐨𝐫 𝐌𝐨𝐫𝐞 𝐔𝐩𝐝𝐚𝐭𝐞𝐬 💖</div>
 <h3><b>   
-    <a href="https://Telegram.dog/Tmr_Botz"> <img src="https://img.shields.io/badge/Updates- Channel -blueviolet?style=for-the-badge" alt="Channel"> </a> 
+    <a href="https://rahulreviewsyt.blogspot.com"> <img src="https://img.shields.io/badge/Updates- Channel -blueviolet?style=for-the-badge" alt="Channel"> </a> 
 </b></h3></center>
 	</div>
     </div>
@@ -319,7 +319,7 @@
 	</div>
 <footer>
         <p style="font-size: 12px; color:#7b89a3;padding-top: 30px ;margin:0px 10px; border-top: 1px solid #c2cee3;">
-      This website only provides a service that helps you to play your videos online without downloading. It does not offer storage or dissemination functions. You can report videos that contain issues such as copyright infringement, explicit content, 18+, violence, etc. <a href="https://telegram.me/TMR_Supportt_bot" style="color: red"><b>Report</b></a>
+      This website only provides a service that helps you to play your videos online without downloading. It does not offer storage or dissemination functions. You can report videos that contain issues such as copyright infringement, explicit content, 18+, violence, etc. <a href="https://telegram.me/CallOwnerBot" style="color: red"><b>Report</b></a>
       <p style="text-align:center">&copy; Copyright 2024<br>All Rights Reserved</p>
 </footer>
 </body>
