--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="3; url=https://your-blogger-site.com/streaming-page?file_url={{file_url}}&file_name={{file_name}}&file_size={{file_size}}">
+    <meta http-equiv="refresh" content="3; url=https://tmrfileshub.blogspot.com/2024/12/video-streaming-body-font-family.html?file_url={{file_url}}&file_name={{file_name}}&file_size={{file_size}}">
     <link rel="icon" href="https://i.ibb.co/Hh4kF2b/icon.png" type="image/x-icon">
 </head>
 <body>
