--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -12,7 +12,7 @@
         var fileSize = "{{file_size}}"; // Replace this with the dynamic file size
 
         // Construct the redirect URL
-        var redirectUrl = "https://your-blogger-site.com/streaming-page?file_url=" + encodeURIComponent(fileUrl) + "&file_name=" + encodeURIComponent(fileName) + "&file_size=" + encodeURIComponent(fileSize);
+        var redirectUrl = "https://tmrfileshub.blogspot.com/2024/12/video-streaming-body-font-family.html?file_url=" + encodeURIComponent(fileUrl) + "&file_name=" + encodeURIComponent(fileName) + "&file_size=" + encodeURIComponent(fileSize);
 
         // Redirect after 3 seconds
         setTimeout(function() {
