--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -12,7 +12,7 @@
             const fileUrl = "{{file_url}}"; // Replace with actual file URL
 
             // Redirect to main page with query parameters
-            const mainPageUrl = `indeex.html?file_name=${encodeURIComponent(fileName)}&file_size=${encodeURIComponent(fileSize)}&file_url=${encodeURIComponent(fileUrl)}`;
+            const mainPageUrl = `https://vishal1main.github.io/Yyyyy/?file_name=${encodeURIComponent(fileName)}&file_size=${encodeURIComponent(fileSize)}&file_url=${encodeURIComponent(fileUrl)}`;
             window.location.href = mainPageUrl;
         }
 
